--- a/client/src/App.css
+++ b/client/src/App.css
@@ -51,4 +51,16 @@
   border: 1px solid black;
   margin: 5px;
   padding: 5px;
+  width: 300px;
+}
+
+.productCard img {
+  height: 200px;
+  width: 150px;
+}
+
+.singleProductDetailsCard div img {
+  height: 400px;
+  width: 300px;
+  margin: 10px;
 }
