--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,7 +42,25 @@
 }
 
 #navBar {
+  width: 100%;
+  height: 150px;
+  border: 1px solid black;
   background-color: pink;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.navLinks {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
+.navLinks a {
+  font-size: 40px;
 }
 
 .productsContainer {
