--- a/client/src/App.css
+++ b/client/src/App.css
@@ -43,19 +43,22 @@
 
 #navBar {
   width: 100%;
-  height: 150px;
+  height: 100px;
   border: 1px solid black;
   background-color: pink;
   top: 0;
   left: 0;
   display: flex;
-  align-items: center;
   justify-content: center;
+  position: absolute;
+  z-index: 1000;
+  margin-bottom: 1000px;
 }
 
 .navLinks {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   width: 100%;
 }
 
@@ -67,6 +70,7 @@
   display: grid;
   grid-template-columns: auto auto auto;
   justify-content: center;
+  margin: 75px;
 }
 
 .productCard {
