--- a/client/src/App.css
+++ b/client/src/App.css
@@ -43,9 +43,10 @@
 
 #navBar {
   width: 100%;
-  height: 100px;
-  border: 1px solid black;
-  background-color: pink;
+  height: 80px;
+  /* border: 1px solid black; */
+  background-color: #0d47a1;;
+  position: fixed;
   top: 0;
   left: 0;
   display: flex;
@@ -53,6 +54,8 @@
   position: absolute;
   z-index: 1000;
   margin-bottom: 1000px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 0 20px;
 }
 
 .navLinks {
@@ -60,10 +63,20 @@
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
+  max-width: 1200px;
 }
 
 .navLinks a {
-  font-size: 40px;
+  color: white;
+  font-weight: 500;
+  padding: 10px 15px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease, color 0.3 ease;
+}
+
+.navLinks a:hover {
+  background-color: #1565c0;
+  color: #e3f2fd;
 }
 
 .productsContainer {
