--- a/client/src/App.css
+++ b/client/src/App.css
@@ -256,3 +256,55 @@ body {
     padding: 20px;
   }
 }
+
+/* Register Page */
+
+.registerPage {
+  padding: 2rem;
+  
+  border-radius: 30px;
+  width: 320px;
+  box-shadow: 0 5px 15px rgba(255, 255, 255, 0.089);
+}
+
+.registerPage h1 {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.registerPage input {
+  width: 100%;
+  padding: 6px;
+  margin-top: 0.25rem;
+  margin-bottom: 1rem;
+  border: 1px solid #cccccc;
+  background-color: white;
+  color: #292929;
+  border-radius: 5px;
+  font-size: 1rem;
+}
+
+.registerPage button {
+  padding: 8px;
+  background-color: #1976D2;
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 0.5rem;
+  font-size: 0.95rem;
+}
+
+.formGroup {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 1rem;
+}
+
+.formGroup label {
+  font-weight: bold;
+  margin-bottom: 0.3rem;
+  font-size: 1rem;
+}
