--- a/client/src/components/CSS/adminDashboard.css
+++ b/client/src/components/CSS/adminDashboard.css
@@ -44,3 +44,38 @@
     text-align: center; 
     color: #333; 
 }
+
+.users-container {
+    padding: 2rem; 
+    background-color: #f8f8f8; 
+    border-radius: 8px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.users-title {
+    font-size: 3rem;
+    font-weight: bold;
+    margin-bottom: 2rem; 
+    text-align: center; 
+    color: #333; 
+}
+
+.users-list {
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* 3 items per row */
+    gap: 20px; /* Space between items */
+    padding: 20px;
+}
+
+.user-item {
+    background-color: #f9f9f9;
+    padding: 20px;
+    border: 2px solid #ccc;           
+    border-radius: 8px;                
+    box-sizing: border-box;            
+    text-align: left;
+    transition: border-color 0.3s ease;
+
+}
+
