--- a/client/src/App.css
+++ b/client/src/App.css
@@ -310,6 +310,8 @@ body {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   max-width: 900px;
   margin: auto;
+  margin-top: 90px;
+
 }
 
 .productTitle {
@@ -339,7 +341,7 @@ body {
 
 .go-back-button {
   background-color: #1976D2;
-  color: white;
+  color: #333;
 
 }
 
