--- a/client/src/App.css
+++ b/client/src/App.css
@@ -342,7 +342,9 @@ body {
 .go-back-button {
   background-color: #1976D2;
   color: #333;
-
+  margin: 1px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
 
 .productInfo button {
