--- a/client/src/App.css
+++ b/client/src/App.css
@@ -179,6 +179,7 @@ body {
   background-color: transparent;
   color: white;
   font-weight: 500;
+  font-size: larger;
   transition: background-color 0.3s ease, color 0.3s ease;
   border: 1px solid transparent;
 }
