--- a/client/src/App.css
+++ b/client/src/App.css
@@ -51,17 +51,16 @@ body {
 
 #navBar {
   width: 100%;
-  height: 80px;
+  height: 4rem;
   border: 1px solid black;
   background-color: #0d47a1;;
   position: fixed;
+  margin-top: 0;
   top: 0;
   left: 0;
   display: flex;
   justify-content: center;
-  position: absolute;
   z-index: 1000;
-  margin-bottom: 1000px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   padding: 0 20px;
 }
@@ -72,6 +71,7 @@ body {
   align-items: center;
   width: 100%;
   max-width: 1200px;
+  margin-bottom: 1rem;
 }
 
 .navLinks a {
@@ -97,7 +97,7 @@ body {
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 20px;
   margin: 0 auto;
-  margin-top: 5vw;
+  margin-top: 2vw;
   max-width: 80vw;
   box-sizing: border-box;
   padding: 0 20px;
@@ -202,11 +202,10 @@ body {
 
 .pageWrapper{
   background-color: #f0f0f0;
-  padding: 40px clamp(16px, 5vw 40px);
+  padding: 20px clamp(16px, 5vw, 40px);
   max-width: 100%;
-  margin: 20px auto 0 auto;
+  margin: 10px auto 0 auto;
   min-height: 100vh;
-  display: flex;
   box-sizing: border-box;
   display: block;
 }
@@ -219,7 +218,7 @@ body {
   border-radius: 12px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   max-width: 900px;
-  margin: auto;
+  margin-top: 100px;
 }
 
 .productTitle {
@@ -280,7 +279,7 @@ body {
 
 .registerPage {
   padding: 2rem;
-  margin-top: 7vw;
+  margin-top: 3vw;
   border-radius: 30px;
   width: 250px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
