manually updated the height of admin dashbord

--- a/client/src/components/CSS/adminDashboard.css
+++ b/client/src/components/CSS/adminDashboard.css
@@ -31,6 +31,9 @@
 }
 
 .admin-container {
+    margin-top: 100px;
+    margin-bottom: 30px;
+    height: 500px;
     padding: 2rem; 
     background-color: #f8f8f8; 
     border-radius: 8px; 
