--- a/client/src/components/CSS/productList.css
+++ b/client/src/components/CSS/productList.css
@@ -104,7 +104,7 @@
   display: block;
 }
   
-.productActionButtons {
+.productBtns {
   display: flex;
   flex-direction: column;
   margin-top: 20px;
